fixed spacing on mobile opt

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'MontBold';
   src: url('../src/utils/fonts/FontsFree-Net-Mont-Bold.ttf') format('truetype');
@@ -9,7 +8,7 @@
   text-align: center;
   width: 100%;
   max-width: 100%;
-  height: 2250px;
+  height: 2550px;
   background-color: rgb(0, 0, 0);
   margin-top: -50px;
   white-space: nowrap;
@@ -51,11 +50,12 @@ footer {
   color: white;
   z-index: 8;
   position: absolute;
-  margin-top: 2200px;
+  margin-top: 2500px;
   overflow-x: hidden;
   font-family: 'MontBold', sans-serif;
   margin-left: 20px;
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;;
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  ;
 }
 
 h3 {
@@ -75,16 +75,16 @@ h4 {
   z-index: 7;
   align-self: center;
   font-family: 'MontBold', sans-serif;
-  margin-top:120px;
+  margin-top: 120px;
 }
 
 .subHeadImg {
-    margin-top: 200px;
-    left:361px;
-    width: 400px;
-    position: absolute;
-    z-index: 5;
-  
+  margin-top: 200px;
+  left: 361px;
+  width: 400px;
+  position: absolute;
+  z-index: 5;
+
 }
 
 .check {
@@ -157,7 +157,7 @@ h4 {
   position: absolute;
   bottom: -4px;
   right: 2px;
-  background-color:  rgb(61, 0, 105);
+  background-color: rgb(61, 0, 105);
   transform: rotate(45deg);
   z-index: -1;
 
@@ -195,9 +195,16 @@ h4 {
   text-align: center;
   margin-top: 350px;
   margin-left: 350px;
-  width:600px;
+  width: 600px;
   white-space: normal;
   font-size: 1.2rem;
+}
+
+.aj {
+  width: 150px;
+  border-radius: 30%;
+  border: 4px rgb(190, 160, 211) solid;
+
 }
 
 .edu {
@@ -209,11 +216,16 @@ h4 {
   z-index: 6;
 }
 
-#myWork {
+#myWork,
+#aboutMe {
   color: white;
   margin-top: 900px;
   margin-left: 575px;
   font-family: 'MontBold', sans-serif;
+}
+
+#aboutMe {
+  margin-left: 0;
 }
 
 .projectBtn {
@@ -224,7 +236,7 @@ h4 {
   margin-top: 20px;
   margin-left: -20px;
   box-shadow: rgba(255, 255, 255, 0.8) 0px 3px 8px;
-  
+
 }
 
 ul {
@@ -282,7 +294,8 @@ ul {
   left: -25px;
 }
 
-.webDescBody, .webDescTitle,
+.webDescBody,
+.webDescTitle,
 #webTitle {
   margin-right: 50px;
   display: block;
@@ -384,13 +397,13 @@ ul {
     height: 800px;
   }
 
-  
+
 }
 
 @media only screen and (min-width: 1920px) {
 
   .bgImg {
-    height: 1000px;
+    height: 1100px;
   }
 }
 
@@ -404,24 +417,25 @@ ul {
     z-index: 0;
 
   }
-  .bgImg{
+
+  .bgImg {
     opacity: 25%;
     z-index: -1;
   }
 
   #body {
-    background-color:transparent;
+    background-color: transparent;
     white-space: normal !important;
   }
 
   .welcome {
-    z-index:11;
+    z-index: 11;
   }
 
   .header {
     width: 200%;
     z-index: 0;
-    background-color:transparent;
+    background-color: transparent;
   }
 }
 
@@ -433,23 +447,23 @@ ul {
   .c {
     top: 40px;
     height: 230px;
-    left:-450px
+    left: -450px
   }
 
 
 
-  .header{
-    background-color:transparent;
+  .header {
+    background-color: transparent;
   }
 
   .subHeadImg {
-    left:220px;
+    left: 220px;
     width: 300px;
     z-index: 1;
-    margin-top:170px;
+    margin-top: 170px;
   }
 
-  .bgImg{
+  .bgImg {
     opacity: 20%;
     z-index: -11;
   }
@@ -458,11 +472,12 @@ ul {
     margin-left: 60px;
   }
 
-  .flip-card,  .flip-card2{
+  .flip-card,
+  .flip-card2 {
     left: 250px !important;
   }
 
-  #body{
+  #body {
     background-color: transparent;
   }
 
@@ -482,10 +497,10 @@ ul {
   }
 
 
-  .check{
+  .check {
     font-size: 2rem;
     left: 135px;
-    margin-top:-10px;
+    margin-top: -10px;
   }
 
   .header {
@@ -496,53 +511,62 @@ ul {
 @media only screen and (max-width: 750px) {
 
   .App {
-    height:2900px;
+    height: 2900px;
     z-index: 0;
     overflow: hidden;
   }
 
   .c {
-    
+
     top: 50px;
     height: 170px;
     left: -360px;
-  
+
   }
 
 
 
-  #webTitle, #webTitle2 {
+  #webTitle,
+  #webTitle2 {
     background-color: rgba(0, 0, 0, 0.8);
-    width:260px !important;
+    width: 260px !important;
     margin-right: 0;
     padding: 15px;
   }
-  
-  .bgImg{
+
+  .bgImg {
     opacity: 15%;
     z-index: 0;
-    height:900px;
+    height: 900px;
   }
 
   .welcome {
-   margin-left: 50px;
-   width:300px;
-   font-size: 1.1rem;
-   margin-top: 240px;
+    margin-left: 50px;
+    width: 300px;
+    font-size: 1.1rem;
+    margin-top: 240px;
   }
 
-  .flip-card,  .flip-card2{
+  .flip-card,
+  .flip-card2 {
     left: 100px !important;
   }
 
   #myWork {
-    margin-left: 140px;
+    margin-left: 130px;
     margin-top: 870px;
+    margin-bottom: 5px;
   }
 
+  #web1 {
+    left: 60px;
+
+  }
+
+
   #web2 {
-    left:-250px;
-    top: 1800px;
+    left: -270px;
+    top: 1720px;
   }
 
   .webTitle {
@@ -550,29 +574,31 @@ ul {
     width: 150px;
   }
 
-#web2:hover, #web1:hover {
-  transform: scale(1.3) translateX(1px);
-  z-index: 12;
-}
-.subHeadImg {
-  left:125px;
-  width: 220px;
-  z-index: 5;
-  margin-top:138px;
-}
+  #web2:hover,
+  #web1:hover {
+    transform: scale(1.3) translateX(1px);
+    z-index: 12;
+  }
 
-  .mainTitle{
-    font-size: 2.1rem;
+  .subHeadImg {
+    left: 125px;
+    width: 220px;
+    z-index: 5;
+    margin-top: 138px;
+  }
+
+  .mainTitle {
+    font-size: 2.0rem;
     top: 5px;
     left: 125px;
     margin-bottom: 0;
   }
 
 
-  .check{
+  .check {
     font-size: 1.3rem;
     left: 30px;
-    width:200px;
+    width: 200px;
     margin-top: -80px;
   }
 
@@ -584,18 +610,19 @@ ul {
     transform: none;
     z-index: 12;
   }
-  
+
   #web2:hover {
     transform: none;
     z-index: 12;
   }
 
-  #webTitle2, #webTitle {
+  #webTitle2,
+  #webTitle {
     visibility: hidden;
     display: none;
   }
 
-  .mobDesc{
+  .mobDesc {
     visibility: visible;
     display: block;
     color: white;
@@ -606,9 +633,10 @@ ul {
     white-space: break-spaces;
     height: 600px;
     width: 240px;
-    left:23px;
+    left: 23px;
     font-size: 1.1rem;
-    font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    ;
   }
 
   .edu {
@@ -617,8 +645,8 @@ ul {
 
   footer {
     text-align: center;
-    margin-left: 70px;
-    margin-top: 2850px;
+    margin-left: 60px;
+    margin-top: 2860px;
     font-size: 0.8rem;
 
   }
